2013-12-27  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/RootDevice.java: Initial writing.

	* src/main/java/iprotium/upnp/DataSourceServlet.java:
	Initial writing.

2013-12-26  Allen D. Ball  <ball@10-0-1-2.lan>

	* Interim check-in: Created UPnP Service and Device abstractions
	and Tomcat scaffolding.

	* pom.xml: Require org.apache.tomcat.embed:tomcat-embed-core.

	* src/main/java/iprotium/upnp/RedirectServlet.java:
	Initial writing.

2013-11-27  Allen D. Ball  <ball@10-0-1-2.lan>

	* Annotated packages with @ManifestSection and use
	ManifestSectionProcessor to generate JAR MANIFEST.MF.

	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryCache.java:
	Process send events to capture "local" changes.

	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryThread.java:
	Changed Listener.sendEvent(SSDPDiscoveryRequest) interface method
	to sendEvent(SSDPMessage).

	* src/main/java/iprotium/upnp/ssdp/SSDPNotifyRequest.java:
	Initial writing.

2013-11-26  Allen D. Ball  <ball@10-0-1-2.lan>

	* Imported XSDs from http://upnp.org/resources/upnpresources.zip
	to META-INF/catalog/www.upnp.org.

2013-11-25  Allen D. Ball  <ball@10-0-1-2.lan>

	* Moved iprotium.upnp.ssdp from iprotium.media.ssdp (in
	iprotium-media JAR).
